--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/nodebotanist/velocity-conf-2016-sandboxing-talk#readme",
   "dependencies": {
-    "detective": "^4.3.1",
+    "async": "^1.5.2",
+    "connect-ensure-login": "^0.1.1",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "restify": "^4.1.1",
-    "sandboxjs": "^2.6.1",
+    "express-jwt": "^3.4.0",
+    "npm": "^3.9.6",
     "tripwire": "^4.1.0",
     "webtask-runtime": "^1.1.1"
   }
