--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.14.0",
     "express-jwt": "^3.4.0",
     "npm": "^3.9.6",
+    "redis": "^2.6.2",
     "tripwire": "^4.1.0",
     "webtask-runtime": "^1.1.1"
   }
