--- a/multi@.service
+++ b/multi@.service
@@ -4,6 +4,6 @@ After=docker.service
 
 [Service]
 TimeoutStartSec=0
-ExecStartPre=-/usr/bin/docker kill velocity:1.0
-ExecStart=/usr/bin/docker run velocity:1.0
-ExecStop=/usr/bin/docker stop velocity:1.0
+ExecStartPre=-/usr/bin/docker-compose down
+ExecStart=/usr/bin/docker-compose up
+ExecStop=/usr/bin/docker-compose down
