--- a/multi@.service
+++ b/multi@.service
@@ -1,9 +1,10 @@
 [Unit]
-Description=Starts two docker containers for our Sandbox
+Description= Starting server on port (%i + 1337) for webtasks...
 After=docker.service
 
 [Service]
 TimeoutStartSec=0
-ExecStartPre=-/usr/bin/docker-compose down
-ExecStart=/usr/bin/docker-compose up
-ExecStop=/usr/bin/docker-compose down
+ExecStartPre=-/usr/bin/docker stop velocity-%i
+ExecStart=/usr/bin/docker run --name veliocity-%i -p ${COREOS_PUBLIC_IPV4}:%i:1337 velocity:1.0
+ExecStop=/usr/bin/docker stop velocity-%i
+ExecDestroy=/user/bin/docker stop velocity-%i
